--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,7 +14,7 @@
   <p id="subtitle" class="subtitle">Без скрытых условий · Решение онлайн</p>
 
 
-  <!-- STEP 1 -->
+  <!-- Шаг 1 -->
   <div id="step-loan" class="card">
 
     <label>Сумма займа</label>
@@ -32,7 +32,7 @@
     <button id="toFormBtn" class="primary-btn">Получить займ</button>
   </div>
 
-  <!-- STEP 2 -->
+  <!-- Шаг 2 -->
   <div id="step-form" class="card hidden">
 
     <input type="text" id="firstName" placeholder="Имя" required>
@@ -60,7 +60,7 @@
     <button id="submitBtn" class="primary-btn">Получить решение</button>
   </div>
 
-  <!-- STEP 3 -->
+  <!-- Шаг 3 -->
   <div id="step-decision" class="card hidden"></div>
 
 </div>
